// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | Form/Checkbox Basic 1`] = `
.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c3 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
}

.c4 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<label
  checked={false}
  className="vital__checkbox c0"
>
  <span
    checked={false}
    className="c1"
  >
    <div
      checked={false}
      className="c2"
    >
      <svg
        color="#0E86FE"
        height="1em"
        name="check"
        size="12"
        viewBox="0 0 903.77 739.84"
        width="1em"
      >
        <path
          d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
          data-name="Layer 2"
          fill="currentColor"
        />
      </svg>
    </div>
  </span>
  <span
    className="c3"
  >
    <input
      checked={false}
      className="c4"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    Label
  </span>
</label>
`;

exports[`Storyshots Packages | Form/Checkbox CheckboxGroup 1`] = `
.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c3 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
}

.c4 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<div
  className="vital__checkbox-group "
>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <svg
          color="#0E86FE"
          height="1em"
          name="check"
          size="12"
          viewBox="0 0 903.77 739.84"
          width="1em"
        >
          <path
            d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
            data-name="Layer 2"
            fill="currentColor"
          />
        </svg>
      </div>
    </span>
    <span
      className="c3"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <svg
          color="#0E86FE"
          height="1em"
          name="check"
          size="12"
          viewBox="0 0 903.77 739.84"
          width="1em"
        >
          <path
            d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
            data-name="Layer 2"
            fill="currentColor"
          />
        </svg>
      </div>
    </span>
    <span
      className="c3"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
  <label
    checked={false}
    className="vital__checkbox c0"
  >
    <span
      checked={false}
      className="c1"
    >
      <div
        checked={false}
        className="c2"
      >
        <svg
          color="#0E86FE"
          height="1em"
          name="check"
          size="12"
          viewBox="0 0 903.77 739.84"
          width="1em"
        >
          <path
            d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
            data-name="Layer 2"
            fill="currentColor"
          />
        </svg>
      </div>
    </span>
    <span
      className="c3"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      Label
    </span>
  </label>
</div>
`;

exports[`Storyshots Packages | Form/Checkbox Custom Icon 1`] = `
.c0 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c0:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c3 {
  color: #456296;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
  border-color: #95ABD3;
}

.c4 {
  display: none;
}

.c2 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

<label
  checked={true}
  className="vital__checkbox c0"
>
  <span
    checked={true}
    className="c1"
  >
    <div
      checked={true}
      className="c2"
    >
      <svg
        color="#0E86FE"
        height="1em"
        name="star"
        size="12"
        viewBox="0 0 903.77 739.84"
        width="1em"
      >
        <path
          d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
          data-name="Layer 2"
          fill="currentColor"
        />
      </svg>
    </div>
  </span>
  <span
    className="c3"
  >
    <input
      checked={true}
      className="c4"
      disabled={false}
      type="checkbox"
    />
    Custom Icon
  </span>
</label>
`;
